--- a/ERestaurant/ERestaurant.BL/ERestaurant.BL.csproj
+++ b/ERestaurant/ERestaurant.BL/ERestaurant.BL.csproj
@@ -40,7 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\DtoMenu.cs" />
+    <Compile Include="Model\MenuType.cs" />
+    <Compile Include="Model\OrderStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BaseService.cs" />
+    <Compile Include="Service\IService.cs" />
+    <Compile Include="Service\MenuService.cs" />
+    <Compile Include="Service\ServiceResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ERestaurant.Data\ERestaurant.Data.csproj">
@@ -48,5 +55,6 @@
       <Name>ERestaurant.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
