--- a/ERestaurant/ERestaurant.Data/ERestaurant.Data.csproj
+++ b/ERestaurant/ERestaurant.Data/ERestaurant.Data.csproj
@@ -53,9 +53,12 @@
     <Compile Include="Model\Menu.cs" />
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderItem.cs" />
+    <Compile Include="Model\Restaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\CategoryRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\ItemRepository.cs" />
     <Compile Include="Repository\MenuRepository.cs" />
     <Compile Include="RestaurantContext.cs" />
   </ItemGroup>
