--- a/ERestaurant/ERestaurant.Web.Tests/ERestaurant.Web.Tests.csproj
+++ b/ERestaurant/ERestaurant.Web.Tests/ERestaurant.Web.Tests.csproj
@@ -63,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CategoryServiceTests.cs" />
+    <Compile Include="Services\ItemServiceTests.cs" />
     <Compile Include="Services\MenuServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
