--- a/ERestaurant/ERestaurant.WebApp/Web.config
+++ b/ERestaurant/ERestaurant.WebApp/Web.config
@@ -25,6 +25,10 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <!--<customErrors mode="Off"/>-->
+    <!--<customErrors mode="On" defaultRedirect="~/ErrorHandler/Index">-->
+      <!--<error statusCode="404" redirect="~/ErrorHandler/NotFound" />-->
+    <!--</customErrors>-->
   </system.web>
   <system.webServer>
     <modules>
