--- a/ERestaurant/ERestaurant.WebApp/ERestaurant.WebApp.csproj
+++ b/ERestaurant/ERestaurant.WebApp/ERestaurant.WebApp.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MenusController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
