--- a/ERestaurant/ERestaurant.BL/ERestaurant.BL.csproj
+++ b/ERestaurant/ERestaurant.BL/ERestaurant.BL.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Model\DtoMenu.cs" />
     <Compile Include="Model\DtoOrder.cs" />
     <Compile Include="Model\DtoOrderItem.cs" />
+    <Compile Include="Model\DtoRestaurant.cs" />
     <Compile Include="Model\MenuType.cs" />
     <Compile Include="Model\OrderStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
