--- a/ERestaurant/ERestaurant.Data/ERestaurant.Data.csproj
+++ b/ERestaurant/ERestaurant.Data/ERestaurant.Data.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,6 +79,7 @@
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="ApplicationDbInitializer.cs" />
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="IApplicationUser.cs" />
     <Compile Include="Model\Category.cs" />
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Menu.cs" />
