--- a/ERestaurant/ERestaurant.WebApp/ERestaurant.WebApp.csproj
+++ b/ERestaurant/ERestaurant.WebApp/ERestaurant.WebApp.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Items\Index.cshtml" />
     <Content Include="Views\Menus\Details.cshtml" />
     <Content Include="Views\Menus\Index.cshtml" />
+    <Content Include="Views\Menus\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
